# FirstPersonShooter

./: CMakeLists.txt
include/: SimpleGameEngine.cpp  SimpleGameEngine.h
src/: main.cpp
